compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funEquals.kt
// FIR_IDENTICAL
fun foo() =<!SYNTAX!><!>
